--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -66,6 +66,7 @@ de:
   successful sign-out: "Abgemeldet!"
   invalid login: "Benutzername oder Passwort ungültig"
   invalid password: "Falsches Passwort"
+  sign back in: "Zu deiner Sicherheit verfallen Anmeldungen nach zwei Wochen. Bitte melde dich erneut an."
   youversion: "YouVersion"
   username or email prompt: "Benutzername (oder E-Mail):"
   password prompt: "Passwort:"
@@ -76,7 +77,6 @@ de:
   registered ago: "registrierte sich vor %{time_ago}"
   version header: "Version: %{version}"
   bible versions: "Bibelversionen"
-  read this version: "Diese Version lesen"
   reader: "Leseansicht"
   lifechurch short url: "LifeChurch.tv"
   about: "Über"
@@ -192,8 +192,8 @@ de:
     welcome to youversion: "Willkommen in der YouVersion-Gemeinschaft!"
     confirm email: "Bitte rufe deine E-Mails ab und schließe die Registrierung mit einem Klick auf den Link ab. Danke."
     sign up for an account: "Melde dich für ein kostenloses YouVersion-Konto an"
-    follow user: "%{user} folgen"
     follow: "Folgen"
+    follow user: "%{user} folgen"
     unfollow: "Nicht mehr folgen"
     following title: "Personen, denen ich folge"
     user does not follow you: "%{user} folgt dir nicht."
@@ -387,6 +387,7 @@ de:
     creation form errors: "Folgende(r) Fehler verhindern die Erstellung deines Lesezeichens:"
     successfully created: "Lesezeichen hinzugefügt"
     successfully deleted: "Lesezeichen entfernt"
+    successfully updated: "Lesezeichen aktualisiert"
     labels placeholder: "Verschiedene Stichwörter durch Kommata trennen."
     save: "Lesezeichen speichern"
     confirm delete: "Ja, ich bin sicher."
@@ -642,3 +643,8 @@ de:
   app errors:
     404 explanation: "Du kannst es noch einmal von <a href='%{reader_path}'>home page</a> aus versuchen. Gibt es da immer noch Probleme? Kontaktiere unser <a href='%{support_url}'>Support-Team</a>."
     404 message: "Leider kann die Seite, die du suchst, nicht gefunden werden."
+  versions:
+    publisher widget title: "Herausgeber"
+    visit publisher: "Besuche die Website des Herausgebers"
+    read title: "Lese diese Version"
+    public domain: "Public Domain"
