--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -76,7 +76,6 @@ en-GB:
   registered ago: "Registered %{time_ago} ago"
   version header: "Version: %{version}"
   bible versions: "Bible Versions"
-  read this version: "Read this Version"
   reader: "Reader"
   lifechurch short url: "LifeChurch.tv"
   about: "About"
@@ -192,8 +191,8 @@ en-GB:
     welcome to youversion: "Welcome to the YouVersion community."
     confirm email: "Please check your e-mail and click the link to confirm your registration."
     sign up for an account: "Create a Free YouVersion Account"
-    follow user: "Follow %{user}"
     follow: "Follow"
+    follow user: "Follow %{user}"
     unfollow: "Unfollow"
     following title: "People I'm Following"
     user does not follow you: "%{user} does not follow you."
@@ -636,3 +635,6 @@ en-GB:
       highlights: "Highlights:"
       'on': "On"
       'off': "Off"
+  versions:
+    publisher widget title: "Publisher"
+    public domain: "Public Domain"
