--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -14,7 +14,7 @@ es:
   created ago: "Creado hace %{time_ago}"
   copy: "Copiar"
   copy confirmed: "¡Copiado!"
-  new note: "Nota nueva"
+  new note: "Crear Nueva Nota"
   twitter: "Twitter"
   facebook: "Facebook"
   share success: "Su mensaje ha sido compartido."
@@ -66,6 +66,7 @@ es:
   successful sign-out: "¡Salió de la sesión!"
   invalid login: "Usuario o Contraseña Inválido"
   invalid password: "Contraseña Incorrecta"
+  sign back in: "Para su seguridad, el ingreso expira después de dos semanas. Por favor ingrese de nuevo."
   youversion: "YouVersion"
   username or email prompt: "Usuario (o Correo Electrónico)"
   password prompt: "Contraseña"
@@ -76,7 +77,6 @@ es:
   registered ago: "Registrado hace %{time_ago}"
   version header: "Versión: %{version}"
   bible versions: "Versiones Bíblicas"
-  read this version: "Lea esta Versión"
   reader: "Lector"
   lifechurch short url: "LifeChurch.tv"
   about: "Acerca de"
@@ -192,8 +192,8 @@ es:
     welcome to youversion: "¡Bienvenido a la comunidad YouVersion!"
     confirm email: "Por favor, revise su cuenta de correo electrónico y haga clic en el enlace para confirmar su registro."
     sign up for an account: "Crear Cuenta Gratuita de YouVersion"
-    follow user: "Seguir a %{user}"
     follow: "Seguir"
+    follow user: "Seguir a %{user}"
     unfollow: "Dejar de seguir"
     following title: "Personas a quienes sigo"
     user does not follow you: "%{user} no le sigue."
@@ -387,6 +387,7 @@ es:
     creation form errors: "El siguiente error (s) impidió la creación de su marcador:"
     successfully created: "Marcador Añadido"
     successfully deleted: "Marcador eliminado"
+    successfully updated: "Marcador Actualizado"
     labels placeholder: "Separe las  diferentes etiquetas con comas."
     save: "Guardar Marcador"
     confirm delete: "Si, estoy seguro."
@@ -493,6 +494,7 @@ es:
     subscribe successful: "¡Qué bien! Ahora está suscrito a este plan."
     which day in plan: "Dia %{day} de %{total}"
     must start to complete: "¡Iniciar este plan para salvar lecturas completadas!"
+    invalid reference: "Lo siento, una de las refencias de Escritura para esta lectura puede ser que no existe en la versión elegida. Intenta seleccionar una versión diferente, encima. Si continúe viendo esta mensaje, por favor deja saber a nuestro <a href='%{support_url}'>support team</a> sobre el problema. "
   registration:
     with facebook: "Ingresar usando Facebook"
     benefits title: "Obtenga la Experiencia Completa"
@@ -640,3 +642,16 @@ es:
       'off': "Desactivado"
   app errors:
     404 explanation: "Desafortunadamente, no hemos encontrado una página para <em>%{requested_path}</em>. Si crees que esta página debería existir, por favor, permita que nuestro <a href='%{support_url}'>equipo de apoyo </a> sepa, o regresa a la <a href='%{reader_path}'>reader</a>."
+    404 message: "Lo sentimos, la página que usted está buscando no puede ser hallada. "
+    408 message: "Desafortunadamente nuestros servidores no respondieron durante el tiempo adecuado."
+    408 explanation: "Puede probar de nuevo <a href= %{reload_path}>recargando</a> la pagina. Hemos sido alertados y resolveremos cualquier problema persistente tan pronto como sea posible."
+  versions:
+    index title: "Versiones Disponibles"
+    publisher widget title: "Editor"
+    visit publisher: "Visite la Página Web del Publicador"
+    read title: "Lea Esta Versión"
+    other versions: "Otras Versiones de Este Publicador"
+    number of versions field: "Número total de versiones:"
+    number of languages field: "Número total de lenguajes:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Dominio público"
