--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -14,7 +14,7 @@ fi:
   created ago: "Luotu %{time_ago} sitten"
   copy: "Kopio"
   copy confirmed: "Kopioitu!"
-  new note: "Uusi muistiinpano"
+  new note: "Luo uusi muistiinpano"
   twitter: "Twitter"
   facebook: "Facebook"
   share success: "Viestisi on jaettu."
@@ -66,6 +66,7 @@ fi:
   successful sign-out: "Olet kirjautunut ulos!"
   invalid login: "Virheellinen käyttäjänimi tai salasana"
   invalid password: "Väärä salasana"
+  sign back in: "Turvallisuutesi takaamiseksi kirjautuminen raukeaa kahdessa viikossa. Ole hyvä ja kirjaudu uudelleen."
   youversion: "YouVersion"
   username or email prompt: "Käyttäjänimi (tai sähköpostiosoite)"
   password prompt: "Salasana"
@@ -73,10 +74,9 @@ fi:
   sign in to youversion: "Kirjaudu sisään YouVersioniin"
   remove: "Poista"
   confirm danger: "Kyllä, olen varma"
-  registered ago: "Rekisteröitynyt %{time_ago} sitten"
+  registered ago: "Rekisteröity %{time_ago} sitten"
   version header: "Käännös: %{version}"
   bible versions: "Raamatun käännökset"
-  read this version: "Lue tätä käännöstä"
   reader: "Lukija"
   lifechurch short url: "LifeChurch.tv"
   about: "Tietoa"
@@ -192,8 +192,8 @@ fi:
     welcome to youversion: "Tervetuloa YouVersion-yhteisöön!"
     confirm email: "Ole hyvä ja tarkista sähköpostisi ja klikkaa linkkiä vahvistaaksesi rekisteröitymisen."
     sign up for an account: "Luo ilmainen YouVersion-tili"
-    follow user: "Seuraa käyttäjää %{user}"
     follow: "Seuraa"
+    follow user: "Seuraa käyttäjää %{user}"
     unfollow: "Lopeta seuraaminen"
     following title: "Ihmiset, joita seuraan"
     user does not follow you: "Käyttäjä %{user} ei seuraa sinua."
@@ -387,6 +387,7 @@ fi:
     creation form errors: "Kirjanmerkin luominen estyi seuraavien virheiden takia:"
     successfully created: "Kirjanmerkki lisätty"
     successfully deleted: "Kirjanmerkki poistettu"
+    successfully updated: "Kirjanmerkki päivitetty"
     labels placeholder: "Erota useat etiketit pilkuilla."
     save: "Tallenna kirjanmerkki"
     confirm delete: "Kyllä, olen varma"
@@ -442,14 +443,14 @@ fi:
     no content: "Suunnitelmassasi ei ole tälle päivälle luettavaa, joten se on merkitty suoritetuksi."
     read today: "Näytä tämän päivän suunnitelma"
     completion status _ below percentage: "Suoritettu"
-    current progress html: "Päivä<b>%{day}</b> / <b>%{total_days}</b>"
+    current progress html: "Päivä <b>%{day}</b> / <b>%{total_days}</b>"
     start date _ before date string: "Aloituspäivä:"
     end date _ before date string: "Lopetuspäivä:"
     are you behind: "Oletko jäänyt vähän aikataulusta jälkeen?"
     do you want to reset: "Haluatko uusinnan?"
     catch up text: "Vaihda tämän päivän lukemisto takaisin viimeisimmän lukemasi päivän tekstiin (suunnitelman %{last_completed_day}. päivä)."
     catch up description only: "Jos joskus jäät jälkeen suunnitelmassasi, älä sure! Voit aina vaihtaa nykyisen lukemistosi takaisin viimeisimpään lukemaasi päivään."
-    catch me up: "Ota minut kiinni"
+    catch me up: "Tasaa tilanne"
     restart description: "Voit aloittaa suunnitelman alusta. Edistymisesi ja lukuhistoriasi poistetaan ja voit aloittaa puhtaalta pöydältä."
     restart: "Aloita uudelleen"
     privacy description: "Valinta on sinun. Haluatko, että ihmiset näkevät sinun lukevan tätä suunnitelmaa?"
@@ -616,7 +617,7 @@ fi:
     hp palm: "HP/Palm"
     java: "Java"
     symbian: "Symbian"
-    mobile web: "Mobiiliverkko"
+    mobile web: "Mobiilisivusto"
     amazon: "Kindle Fire"
   pages:
     generic_error:
@@ -642,3 +643,15 @@ fi:
   app errors:
     404 explanation: "Voit aloittaa uudelleen palaamalla <a href='%{reader_path}'>etusivulle</a>. Jos ongelma toistuu, ota yhteyttä <a href='%{support_url}'>tukeemme</a>."
     404 message: "Etsimääsi sivua ei löydy."
+    408 message: "Valitettavasti palvelimemme eivät vastanneet ajallaan."
+    408 explanation: "Voit yrittää <a href= %{reload_path}>ladata sivun uudelleen</a>. Olemme saaneet tiedon tapahtuneesta ja ongelman jatkuessa selvitämme sen mahdollisimman pian."
+  versions:
+    index title: "Saatavilla olevat käännökset"
+    publisher widget title: "Julkaisija"
+    visit publisher: "Vieraile julkaisijan nettisivuilla"
+    read title: "Lue tätä käännöstä"
+    other versions: "Muita käännöksiä tältä julkaisijalta"
+    number of versions field: "Käännöksiä yhteensä:"
+    number of languages field: "Kieliä yhteensä:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Tekijänoikeusvapaa"
