--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -66,6 +66,7 @@ hi:
   successful sign-out: "YouVersion से साइन आउट हुए!"
   invalid login: "अनादृकित username या पासवर्ड "
   invalid password: "गलत पासवर्ड "
+  sign back in: "आपकी सुरक्षा के लिए logins दो सप्ताह के बाद समाप्त हो जायेगा |पुन:साईंन इन कीजिये|"
   youversion: "YouVersion"
   username or email prompt: "Username (या इमेल)"
   password prompt: "पासवर्ड "
@@ -76,7 +77,6 @@ hi:
   registered ago: "Registered%{time_ago}समय पहले|"
   version header: "संस्करण: %{संस्करण}"
   bible versions: "बाईबिल की अन्य संस्करणे"
-  read this version: "कृपया इस संस्करण को पढ़िए"
   reader: "पाठक"
   lifechurch short url: "Lifechurch.tv"
   about: "के विषय में "
@@ -192,8 +192,8 @@ hi:
     welcome to youversion: "YouVersion समाज में आपका स्वागत हैं|"
     confirm email: "कृपया अपना इमेल जांच करे और लिंक क्लिक कर अपना पंजीकरण सुनिश्चित करे|"
     sign up for an account: "अपना मुफ्त YouVersion अकाउंट बनायिए"
-    follow user: "अनुयाय%{user}"
     follow: "अनुयाय "
+    follow user: "अनुयाय%{user}"
     unfollow: "अनुयाय ना करे"
     following title: "जिन लोगों का मैं अनुयाय कर रहा हू"
     user does not follow you: "%{user} आपके अनुयाय नहीं हैं|"
@@ -387,6 +387,7 @@ hi:
     creation form errors: "निम्नलिखित error(s) के कारण बुकमार्क निर्माण विफल हुआ:"
     successfully created: "बुकमार्क पाया गया "
     successfully deleted: "बुकमार्क हटा दिया गया हैं"
+    successfully updated: "बुकमार्क अपडेट हुआ "
     labels placeholder: "विभिन्न लेबेल को अल्पविराम द्वारा अलग-अलग दर्शाए|"
     save: "बुकमार्क save कीजिए"
     confirm delete: "हाँ, मैं निश्चित हूँ "
@@ -642,3 +643,15 @@ hi:
   app errors:
     404 explanation: "शुरुआत करने का पुन:कोशिश करे <a href='%{reader_path}'>home page</a>. अभी परेशानी हो रही ? संपर्क करिए <a href='%{support_url}'>support team</a>."
     404 message: "कृपया क्षमा कीजिए,आपके द्वारा अन्वेषित पेज नहीं मिल सका |"
+    408 message: "हमारे सर्वर द्वारा प्रतिक्रिया नहीं जताने के क्षमा चाहते हैं|"
+    408 explanation: "दोबारा कोशिश करे <a href= %{reload_path}>reloading</a>.हमे इस सांकेतिक खराबी की जानकारी हैं,दोहराए जाने पर जल्द से जल्द सुधारने की तैयारी हैं| "
+  versions:
+    index title: "उपलब्ध संस्करण "
+    publisher widget title: "प्रकाशक "
+    visit publisher: "प्रकाशक के वेबसाइट पर जाये "
+    read title: "इस संस्करण को पढ़िए "
+    other versions: "इस प्रकाशक के अन्य संस्करण "
+    number of versions field: "कुल संस्करण:"
+    number of languages field: "कुल भाषाएँ "
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "सार्वजनिक कार्यक्षेत्र "
