--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -66,6 +66,7 @@ ja:
   successful sign-out: "サインアウトしました！"
   invalid login: "ユーザー名かパスワードが正しくありません。"
   invalid password: "パスワードが正しくありません"
+  sign back in: "セキュリティ保持のために、ログインは2週間で解除されます。改めてサインインしてください。"
   youversion: "YouVersion"
   username or email prompt: "ユーザ名(もしくはメールアドレス):"
   password prompt: "パスワード"
@@ -76,7 +77,6 @@ ja:
   registered ago: "%{time_ago} 前に登録"
   version header: "バージョン： %{version}"
   bible versions: "聖書訳"
-  read this version: "この聖書訳を読む"
   reader: "聖書リーダー"
   lifechurch short url: "LifeChurch.tv"
   about: "概要"
@@ -192,8 +192,8 @@ ja:
     welcome to youversion: "YouVersion のコミュニティーへようこそ！"
     confirm email: "メールが送信されていますので、登録の確認のためメールに記載されたリンクをクリックして下さい。"
     sign up for an account: "YouVersion の無料アカウントを作成する"
-    follow user: "%{user} さんをフォローする"
     follow: "フォローする"
+    follow user: "%{user} さんをフォローする"
     unfollow: "フォローを解除する"
     following title: "フォローしている人たち"
     user does not follow you: "%{user} さんはあなたをフォローしていません"
@@ -387,6 +387,7 @@ ja:
     creation form errors: "以下のエラーが発生したために、ブックマークをつけることができませんでした。"
     successfully created: "ブックマークを追加しました"
     successfully deleted: "ブックマークが削除されました"
+    successfully updated: "ブックマークがアップデートされました"
     labels placeholder: "複数のラベルがある場合は、コンマで区切ってください"
     save: "ブックマークを保存"
     confirm delete: "間違いありません"
@@ -642,3 +643,15 @@ ja:
   app errors:
     404 explanation: "<a href='%{reader_path}'>ホームページ</a>へ戻ってみてください。\n問題が継続する場合は、<a href='%{support_url}'>support team</a>までご連絡ください。"
     404 message: "申し訳ありませんが、お探しのページは見つかりません。"
+    408 message: "申し訳ございませんが、サーバが応答するのに時間がかかっています。"
+    408 explanation: "You can try again by <a href= %{reload_path}>reloading</a> the page. 当方でも事態を把握しておりますので、持続的問題につきましては、できるだけ早く対処させていただきます。"
+  versions:
+    index title: "ご利用いただける聖書訳"
+    publisher widget title: "出版元"
+    visit publisher: "出版元のウェブサイトにアクセスする"
+    read title: "この聖書訳を読む"
+    other versions: "この出版元から出ているその他の聖書訳"
+    number of versions field: "聖書訳の数"
+    number of languages field: "翻訳言語の数"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "パブリックドメイン"
