--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -66,6 +66,7 @@ km:
   successful sign-out: "ចាក​ចេញ"
   invalid login: "ឈ្មោះ​អ្នក​ប្រើ​ប្រាស់ ឬ​ពាក្យ​សម្ងាត់​មិន​ត្រឹម​ត្រូវ"
   invalid password: "ពាក្យ​សម្ងាត់​មិន​ត្រឹម​ត្រូវ"
+  sign back in: "ដើម្បី​សុវត្ថិភាព ការ​​ចុះ​ឈ្មោះ​ចូលនឹង​ផុត​កំណត់​បន្ទាប់​ពី​ពីរ​សប្ដាហ៍។ សូម​ចុះ​ឈ្មោះ​ចូល​ម្ដង​ទៀត។"
   youversion: "YouVersion"
   username or email prompt: "ឈ្មោះ​ប្រើ​ប្រាស់ (ឬ អ៊ី​ម៉ែល)"
   password prompt: "ពាក្យ​សម្ងាត់"
@@ -76,7 +77,6 @@ km:
   registered ago: "ចុះ​ឈ្មោះ​ហើយ %{time_ago} កន្លង​ទៅ"
   version header: "ជំនាន់ៈ %{version}"
   bible versions: "ជំនាន់​ព្រះ​គម្ពីរ"
-  read this version: "អាន​ជំនាន់​នេះ"
   reader: "កម្ម​វិធី​អាន"
   lifechurch short url: "LifeChurch.tv"
   about: "អំពីរ"
@@ -192,8 +192,8 @@ km:
     welcome to youversion: "សូម​ស្វាគមន៍​មក​កាន់​សហគមន៍ YouVersion!"
     confirm email: "សូម​ឆែក​អ៊ី​ម៉ែល ហើយ​ចុច​តំណរ​ភ្ជាប់​ដើម្បី​បញ្ជាក់​ពី​ការ​ចុះ​ឈ្មោះ​របស់​អ្នក។"
     sign up for an account: "បង្កើត​គណនី​ YouVersion ដោយ​ឥត​គិត​ថ្លៃ"
-    follow user: "តាម %{user}"
     follow: "តាម"
+    follow user: "តាម %{user}"
     unfollow: "ឈប់​តាម"
     following title: "មនុស្ស​ដែល​ខ្ញុំ​កំពុង​តាម"
     user does not follow you: "%{user} មិន​អនុញ្ញាតិ​អោយ​អ្នក​តាម​ឡើយ។"
@@ -387,6 +387,7 @@ km:
     creation form errors: "មាន​កំហុស​ (ច្រើន)​កើត​មាន​ឡើង ក្នុង​ការ​បង្កើត​នូវ​កំណត់​ចំណាំ​របស់​លោក​អ្នក៖"
     successfully created: "កំណត់​ចំណាំ​ត្រូវ​បាន​បន្ថែម"
     successfully deleted: "ដក​កំណត់​ចំណាំ​ចេញ"
+    successfully updated: "អាប់​ឌែត​កំណត់​ចំណាំ"
     labels placeholder: "ចែក​ពហុ​ផ្លាកដោយ​ប្រើ​ក្បៀស"
     save: "រក្សា​កំណត់​ចំណាំ"
     confirm delete: "បាទ/ចា៎ ខ្ញុំ​ច្បាស់​ហើយ"
@@ -642,3 +643,7 @@ km:
   app errors:
     404 explanation: "លោក​អ្នក​ប្រហែល​ជា​ចាប់​ផ្ដើម​ម្ដង​ទៀត​ពី  <a href='%{reader_path}'>ទំព័រ​ដើម</a>. នៅ​តែ​មាន​បញ្ហា? សូម​ទាក់​ទង​មក​យើង <a href='%{support_url}'>ក្រុម​ជំនួយ</a>."
     404 message: "យើង​សូម​ទោស, ទំព័រ​ដែល​អ្នក​កំពុង​រក​មិន​មាន​ទេ។"
+  versions:
+    publisher widget title: "អ្នក​បោះ​ផ្សាយ"
+    visit publisher: "ទស្សនា​វែប​សាយ​អ្នក​បោះ​ផ្សាយ"
+    read title: "អាន​ជំនាន់​នេះ"
