--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -66,6 +66,7 @@ mn:
   successful sign-out: "Гарсан!"
   invalid login: "Хэрэглэгчийн нэр, нууц уг тохирохгүй байна."
   invalid password: "Нүүц Үг Алдаатай"
+  sign back in: "Таны аюулгүй байдлын үүднээс нэвтрэлт хоёр долоо хоногийн дараа хүчингүй болно. Дахин шинээр нэвтрэнэ үү. "
   youversion: "YouVersion"
   username or email prompt: "Хэрэглэгчийн нэр (эсвэл и-мэйл хаяг):"
   password prompt: "Нууц Үг:"
@@ -76,7 +77,6 @@ mn:
   registered ago: "%{time_ago}  өмнө бүртгүүлсэн"
   version header: "Орчуулга: %{version}"
   bible versions: "Библийн Орчуулгууд"
-  read this version: "Энэ орчуулгыг унших"
   reader: "Уншигч"
   lifechurch short url: "LifeChurch.tv"
   about: "Тухай"
@@ -192,8 +192,8 @@ mn:
     welcome to youversion: "YouVersion-ий гэр бүлд тавтай морилно уу!"
     confirm email: "Та и-мэйлээ шалгаад, ирсэн холбоосон дээр дарж бүртгэлээ идэвхижүүлнэ үү. "
     sign up for an account: "YouVersion-д үнэгүй бүртгүүлэх"
-    follow user: "%{user} -г Дагах"
     follow: "Дагах"
+    follow user: "%{user} -г Дагах"
     unfollow: "Үл дагах "
     following title: "Миний Дагаж Байгаа Хүмүүс"
     user does not follow you: "%{user} таныг дагаагүй байна."
@@ -387,6 +387,7 @@ mn:
     creation form errors: "Дараах алдаа(ууд) хавчуурга шинээр хийхэд саад болж байна:"
     successfully created: "Хавчуурга нэмэгдсэн"
     successfully deleted: "Номын Хавчуурга Устгагдлаа"
+    successfully updated: "Хавчуурга Шинэчлэгдлээ"
     labels placeholder: "Шошгуудыг таслалаар хуваах"
     save: "Хавчуурга Хадгалах"
     confirm delete: "Тиймээ, би итгэлтэй байна"
@@ -640,3 +641,7 @@ mn:
       'off': "Унтрах"
   app errors:
     404 explanation: "Харамсалтай нь, бид <em>%{requested_path}</em> хуудсыг олсонгүй. Хэрвээ та энэ хуудсыг байх ёстой гэж үзэж байвал, манай тусламжийн багт <a href='%{support_url}'>support team</a> хандаарай, эсвэл буцаад <a href='%{reader_path}'>уншигч</a> руу очоорой."
+  versions:
+    visit publisher: "Нийтлэгчийн Вэбсайтад Зочилох "
+    read title: "Энэ Хувилбарыг Унших "
+    public domain: "Нийтийн Хүртээл "
