--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -66,6 +66,7 @@ ro:
   successful sign-out: "Deconectat!"
   invalid login: "Nume de utilizator sau parolă invalide"
   invalid password: "Parolă incorectă"
+  sign back in: "Pentru siguranța ta, autentificările expiră după două săptămâni. Trebuie să te autentifici din nou."
   youversion: "YouVersion"
   username or email prompt: "Username (sau e-mail):"
   password prompt: "Parolă:"
@@ -76,7 +77,6 @@ ro:
   registered ago: "Înregistrat cu %{time_ago} în urmă"
   version header: "Versiunea: %{version}"
   bible versions: "Versiuni ale Bibliei"
-  read this version: "Citește această versiune"
   reader: "Cititor"
   lifechurch short url: "LifeChurch.tv"
   about: "Despre"
@@ -192,8 +192,8 @@ ro:
     welcome to youversion: "Bine ai venit în comunitatea YouVersion!"
     confirm email: "Te rugăm să-ți verifici e-mailul și să faci click pe link pentru a confirma înregistrarea."
     sign up for an account: "Creează-ți un cont YouVersion gratuit"
-    follow user: "Simpatizează pe %{user}"
     follow: "Simpatizează"
+    follow user: "Simpatizează pe %{user}"
     unfollow: "Nu mai simpatiza"
     following title: "Oameni pe care-i simpatizez"
     user does not follow you: "%{user} nu te simpatizează"
@@ -387,6 +387,7 @@ ro:
     creation form errors: "Următoarele erori au împiedicat crearea unui marcaj:"
     successfully created: "Marcaj adăugat"
     successfully deleted: "Marcaj șters"
+    successfully updated: "Marcaj actualizat"
     labels placeholder: "Separă etichetele între ele cu virgule."
     save: "Salvează marcaj"
     confirm delete: "Sunt sigur"
@@ -642,3 +643,15 @@ ro:
   app errors:
     404 explanation: "Nu am găsit pagina <em>%{requested_path}</em>. Dacă crezi că această pagină ar trebui să existe, anunță <a href='%{support_url}'>support team</a> know, sau navighează înapoi la <a href='%{reader_path}'>reader</a>."
     404 message: " Ne pare rău, pagina pe care o cauți nu poate fi găsită."
+    408 message: "Din păcate, serverele noastre nu au răspuns în timp util."
+    408 explanation: "Popți încerca din nou <a href= %{reload_path}>reîncarcând</a> pagina. Am fost notificați și ne vom ocupa de problemă în cel mai scurt timp."
+  versions:
+    index title: "Versiuni disponibile"
+    publisher widget title: "Editor"
+    visit publisher: "Vizitează website-ul editorului"
+    read title: "CItește această versiune"
+    other versions: "Alte versiuni de la același editor"
+    number of versions field: "Total versiuni:"
+    number of languages field: "Total limbi;"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Domeniu public"
