--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -14,7 +14,7 @@ sk:
   created ago: "Vytvorené pred %{time_ago}"
   copy: "Kopírovať"
   copy confirmed: "Skopírované!"
-  new note: "Nová poznámka"
+  new note: "Vytvoriť poznámku"
   twitter: "Twitter"
   facebook: "Facebook"
   share success: "Vaša správa bola zdieľaná."
@@ -66,6 +66,7 @@ sk:
   successful sign-out: "Odhlásenie úspešné!"
   invalid login: "Nesprávne meno alebo heslo"
   invalid password: "Nesprávne heslo"
+  sign back in: "Z bezpečnostných dôvodov platnosť zapamätaného prihlásenia vyprší po dvoch týždňoch. Prosím prihláste sa znova."
   youversion: "YouVersion"
   username or email prompt: "Prihlasovacie meno (alebo email)"
   password prompt: "Heslo"
@@ -76,7 +77,6 @@ sk:
   registered ago: "Zaregistrovaný pred %{time_ago}"
   version header: "Preklad: %{version}"
   bible versions: "Preklady Biblie"
-  read this version: "Čítať tento preklad"
   reader: "Čítanie"
   lifechurch short url: "LifeChurch.tv"
   about: "O nás"
@@ -192,9 +192,10 @@ sk:
     welcome to youversion: "Vitajte v komunite YouVersion!"
     confirm email: "Skontrolujte si email a kliknite na potvrdzujúci odkaz, ktorý sme vám zaslali."
     sign up for an account: "Vytvorte si bezplatný YouVersion účet"
-    follow user: "Nasledovať používateľa %{user}"
     follow: "Nasledovať"
+    follow user: "Nasledovať používateľa %{user}"
     unfollow: "Zrušiť nasledovanie"
+    unfollow user: "Nenasledovať používateľa %{user}"
     following title: "Ľudia, ktorých nasledujem"
     user does not follow you: "Používateľ %{user} vás nenasleduje"
     recent activity: "Nedávna aktivita"
@@ -387,6 +388,7 @@ sk:
     creation form errors: "Nasledujúce chyby zabránili vytvoreniu záložky:"
     successfully created: "Záložka pridaná"
     successfully deleted: "Záložka odstránená"
+    successfully updated: "Záložka aktualizovaná"
     labels placeholder: "Jednotlivé menovky oddeľte čiarkou."
     save: "Uložiť záložku"
     confirm delete: "Áno, naozaj"
@@ -642,3 +644,15 @@ sk:
   app errors:
     404 explanation: "Skúste začať odznova na <a href='%{reader_path}'>úvodnej stránke</a>. Ak problém stále pretrváva, kontaktujte náš <a href='%{support_url}'>tím podpory</a>."
     404 message: "Prepáčte, ale stránku, ktorú hľadáte, sa nepodarilo nájsť."
+    408 message: "Žiaľ, časový limit na odpoveď nášho servera vypršal."
+    408 explanation: "Môžete sa pokúsiť stránku <a href='%{reload_path}'>opäť načítať</a>. Na tento problém sme boli upozornení a odstránime ho tak rýchlo, ako to bude možné."
+  versions:
+    index title: "Dostupné preklady"
+    publisher widget title: "Vydavateľ"
+    visit publisher: "Navštívte webstránku vydavateľa"
+    read title: "Čítať tento preklad"
+    other versions: "Ďalšie preklady od tohto vydavateľa"
+    number of versions field: "Počet prekladov:"
+    number of languages field: "Počet jazykov:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Voľne dostupné"
