--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -66,6 +66,7 @@ sq:
   successful sign-out: "I dalë!"
   invalid login: "Emri i përdoruesit ose fjalëkalimi i pasaktë"
   invalid password: "Fjalëkalim i pasaktë"
+  sign back in: "Për sigurinë tuaj, hyrjet skadojnë mbas dy javësh. Ju lutemi hyni sërish."
   youversion: "YouVersion"
   username or email prompt: "Emri i përdoruesit (ose E-posta)"
   password prompt: "Fjalëkalimi"
@@ -76,7 +77,6 @@ sq:
   registered ago: "Regjistruar %{time_ago} më parë"
   version header: "Versioni: %{version}"
   bible versions: "Versionet e Biblës"
-  read this version: "Lexo këtë version"
   reader: "Lexuesi"
   lifechurch short url: "LifeChurch.tv"
   about: "Rreth nesh"
@@ -192,8 +192,8 @@ sq:
     welcome to youversion: "Mirëseerdhët në komunitetin YouVersion!"
     confirm email: "Ju lutem kontrolloni postën elektronike dhe klikoni në hallkën lidhëse për të konfirmuar regjistrimin tuaj."
     sign up for an account: "Krijo një llogari YouVersion falas"
-    follow user: "Ndiq përdoruesin %{user}"
     follow: "Ndiq"
+    follow user: "Ndiq përdoruesin %{user}"
     unfollow: "Mos e ndiq"
     following title: "Njerëzit që jam duke ndjekur"
     user does not follow you: "Përdoruesi %{user} nuk po të ndjek ty."
@@ -387,6 +387,7 @@ sq:
     creation form errors: "Gabimi(et) më poshtë e kanë penguar krijimin e shenjuesit tuaj:"
     successfully created: "Shenjuesi u shtua"
     successfully deleted: "Shenjuesi u fshi"
+    successfully updated: "Shenjuesi u përditësua"
     labels placeholder: "Ndaji etiketat e shumta me një presje."
     save: "Ruaj shenjuesin"
     confirm delete: "Po, jam i/e sigurt"
@@ -642,3 +643,7 @@ sq:
   app errors:
     404 explanation: "Mund të provoni të filloni sërish nga <a href='%{reader_path}'>faqja kryesore</a>. A keni akoma probleme? Kontaktoni <a href='%{support_url}'>ekipin e ndihmës</a>."
     404 message: "Na vjen keq, faqja për po kërkoni nuk mund të gjendet."
+  versions:
+    publisher widget title: "Publikuesi"
+    visit publisher: "Vizitoni uebfaqen e publikuesit"
+    read title: "Lexo këtë version"
