--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -66,6 +66,7 @@ tl:
   successful sign-out: "Nakasign-out!"
   invalid login: "Ang username o Password ay Invalid"
   invalid password: "Maling Password"
+  sign back in: "Para sa iyong seguridad, ang mga login ay nag-eexpire pagkatapos ng dalawang linggo. Maaring mag-sign-in ulit."
   youversion: "Youversion"
   username or email prompt: "Username (o Email)"
   password prompt: "Password"
@@ -76,7 +77,6 @@ tl:
   registered ago: "Nakarehistro %{time_ago} ang nakalipas"
   version header: "Bersyon: %{version}"
   bible versions: "Mga Bersyon nang Bibliya"
-  read this version: "Basahin ang Bersyon na Ito"
   reader: "Mambabasa"
   lifechurch short url: "LifeChurch.tv"
   about: "About"
@@ -192,8 +192,8 @@ tl:
     welcome to youversion: "Welcome sa Youversion community!"
     confirm email: "Pakitingnan ang iyong email at puntahan ang link para makumpirma ang iyong pagrehistro."
     sign up for an account: "Gumawa ng Libreng Youversion Account"
-    follow user: "Sundan si %{user}"
     follow: "Sundan"
+    follow user: "Sundan si %{user}"
     unfollow: "I-unfollow"
     following title: "Mga Taong Aking Sinusundan"
     user does not follow you: "Hindi ka sinusundan ni %{user}."
@@ -387,6 +387,7 @@ tl:
     creation form errors: "Ang sumusunod na (mga) pagkakamali ay balakid sa paggawa ng iyong bookmark: "
     successfully created: "Naidagdag ang bookmark"
     successfully deleted: "Bookmark ay Tinanggal"
+    successfully updated: "Ang Bookmark ay Na-update"
     labels placeholder: "Paghiwalayin ang mga labels gamit ang kuwit."
     save: "I-save ang Bookmark"
     confirm delete: "Oo, sigurado ako"
@@ -642,3 +643,15 @@ tl:
   app errors:
     404 explanation: "Maaaring mag-umpisang mula sa <a href='%{reader_path}'>home page</a>. Kung sa iyong palagay na dapat nakikita ang pahinang ito, ipaalam lamang sa aming <a href='%{support_url}'>support team</a>."
     404 message: "Ikinalulungkot namin, subalit ang pahinang hinahanap mo ay nawawala."
+    408 message: "Sa kasamaang palad ang server namin ay di sumagot sa tamang oras. "
+    408 explanation: "Subukan mo ulit sa pamamagitan ng <a href= %{reload_path}>pag-reload</a> ng pahina. Kami ay naalerto na at tutugunan ang paulit-ulit na mga problema sa lalong madaling panahon.  "
+  versions:
+    index title: "Mga Maaaring Gamiting Bersiyon"
+    publisher widget title: "Naglathala"
+    visit publisher: "Bisitahin ang Website ng Tagalathala"
+    read title: "Basahin Itong Bersyon"
+    other versions: "Mga Ibang Bersiyon Mula sa Tagalathala"
+    number of versions field: "Kabuuang Mga Bersiyon:"
+    number of languages field: "Kabuuang Mga Wika:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Pampublikong Domain"
