--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,5 +1,5 @@
 zh-CN:
-  now: "现在"
+  now: "今日社区"
   celebrating 50MM: "庆祝5000万的安装！"
   link: "链接"
   site search: "YouVersion 搜索"
@@ -66,6 +66,7 @@ zh-CN:
   successful sign-out: "已退出！"
   invalid login: "用户名或密码无效"
   invalid password: "密码不正确"
+  sign back in: "考虑到安全方面的需要，登录状态两周之后会失效。请你再次登录。"
   youversion: "YouVersion"
   username or email prompt: "用户名（或电子邮件地址）"
   password prompt: "密码"
@@ -76,16 +77,15 @@ zh-CN:
   registered ago: "%{time_ago}之前已注册"
   version header: "版本：%{version}"
   bible versions: "圣经版本"
-  read this version: "阅读这个版本"
   reader: "阅读器"
   lifechurch short url: "LifeChurch.tv"
-  about: "关于"
+  about: "关于我们"
   jobs: "工作机会"
   privacy policy: "隐私条例"
   terms: "使用条款"
-  press: "新闻"
+  press: "博客消息"
   get support: "服务支持"
-  donate title: "奉献"
+  donate title: "捐助奉献"
   choose language field: "选择您的语言："
   settings: "设置"
   profile: "详细资料"
@@ -192,8 +192,8 @@ zh-CN:
     welcome to youversion: "欢迎来到 YouVersion 社区！"
     confirm email: "请查收邮件，并点击其中链接确认注册。"
     sign up for an account: "注册免费 YouVersion 账户"
-    follow user: "关注%{user}"
     follow: "关注"
+    follow user: "关注%{user}"
     unfollow: "取消关注"
     following title: "我关注的人"
     user does not follow you: "%{user} 没有关注你。"
@@ -257,7 +257,7 @@ zh-CN:
     resend confirmation button: "重发确认邮件"
     privacy:
       policy: "%{youversion} 隐私条款"
-      intro: "YouVersion，作为LifeChurch.tv 拥有并运营的网站和应用软件，知道您关心自己的信息是如何被使用和分享的。我们希望以下的说明能够帮助您理解YouVersion 将如何收集，使用和保护您向我们提供的信息。我们不会在隐私条款叙述的情况之外使用或者与其他人分享您的信息。"
+      intro: "YouVersion，作为LifeChurch.tv 拥有并运营的网站和应用软件，知道您关心自己的信息是如何被使用和分享的。我们希望以下的说明能够帮助您理解YouVersion 将如何收集，使用和保护您向我们提供的信息。"
       translation disclaimer: "隐私政策是为了方便您查阅而翻译，LifeChurch.tv 对于翻译的准确性不做任何承诺或保证。如果英文和译文不一致，应以英文为准。"
       what we collect: "我们收集的信息及其用途"
       your information title: "您提供的信息"
@@ -292,7 +292,7 @@ zh-CN:
       description title: "服务说明"
       description text: "LifeChurch.tv 通过 YouVersion 免费向用户提供多样化的服务，包括但不限于在线观看视频，博客博文和评论，文章评论，其他各种通讯工具，论坛和个性化的内容。在使用 YouVersion 时，您理解这种使用可能包括与LifeChurch.tv 的通信，包括但不限于服务通告、管理信息和您个别订阅的其他信息。您理解并同意，您自己负责获得 YouVersion 的使用权，这可能包括设备和第三方费用（例如互联网服务商费，通话费，或与消息传递和显示有关的其他费用）。"
       registration title: "您的注册义务"
-      registration text: "您确认并同意：<ul><li> 根据 YouVersion 登记表的要求，提供真实、准确、最新及完整的个人信息（以下称“登记数据”），和 </li>»<li> 维护和及时更新登记数据以保持真实、准确、最新、完整。如果 LifeChurch.tv 怀疑这些信息不真实、不准确或不完整，LifeChurch.tv 有权暂停或终止您的账户，并拒绝现在或将来对 YouVersion 的任何使用（或其任何部分的使用）。 LifeChurch.tv 关注其所有用户，特别是儿童的安全和隐私。出于这个原因，允许自己13岁以下的孩子使用 YouVersion 的父母必须确认：YouVersion 旨在吸引广大的读者，作为孩子的法定监护人，确定YouVersion 是否适合您的孩子是您的责任。</li></ul>"
+      registration text: "您确认并同意：<ul><li> 根据 YouVersion 登记表的要求，提供真实、准确、最新及完整的个人信息（以下称“注册资料”），和 </li>»<li> 维护和及时更新注册资料以保持真实、准确、最新、完整。如果 LifeChurch.tv 怀疑这些信息不真实、不准确或不完整，LifeChurch.tv 有权暂停或终止您的账户，并拒绝现在或将来对 YouVersion 的任何使用（或其任何部分的使用）。 LifeChurch.tv 关注其所有用户，特别是儿童的安全和隐私。出于这个原因，允许自己13岁以下的孩子使用 YouVersion 的父母必须确认：YouVersion 旨在吸引广大的读者，作为孩子的法定监护人，确定YouVersion 是否适合您的孩子是您的责任。</li></ul>"
       privacy title: "YouVersion 的隐私政策"
       privacy text: "您的注册资料和其他信息受到我们的隐私政策（详见 <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>）约束。您了解，通过 YouVersion 的使用，您同意这些信息的收集和使用（如隐私政策所列），包括由 <a href='http://LifeChurch.tv'>Lifechurch.tv</a> 把这些信息转移给美国或者其他国家储存、处理和使用。"
       account title: "会员帐户、密码和保全"
@@ -387,6 +387,7 @@ zh-CN:
     creation form errors: "下列错误妨碍了您创建书签："
     successfully created: "书签添加成功"
     successfully deleted: "书签已经移除"
+    successfully updated: "书签已更新"
     labels placeholder: "用逗号分开多个标签"
     save: "保存书签"
     confirm delete: "是的，我确定。"
@@ -642,3 +643,15 @@ zh-CN:
   app errors:
     404 explanation: "您可能需要再次从<a href='%{reader_path}'>首页</a>试一下。如果仍然不行，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
     404 message: "很抱歉！您要寻找的页面未被找到！"
+    408 message: "很遗憾我们的服务器没有及时响应。"
+    408 explanation: "您可尝试 <a href= %{reload_path}>重新载入</a> 页面。我们已经接到警示并将尽快解决一切持续存在的问题。"
+  versions:
+    index title: "可用的版本"
+    publisher widget title: "发行商"
+    visit publisher: "访问出版商网站"
+    read title: "阅读这个版本"
+    other versions: "此出版社发行的其他版本"
+    number of versions field: "版本总数："
+    number of languages field: "语言总数："
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "公共领域"
