--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -28,7 +28,7 @@ sv:
   deleted connection error: "Ett fel uppstod när du försökte ta bort anslutningen till %{connection}."
   remove connection: "Ta bort"
   connection users: "Här är några YouVersion-användare du är ansluten till på %{connection}:"
-  connection marketing: "YouVersion är roligare med vänner! Länka ditt YouVersion-konto till dina övriga sociala nätverk för att direkt hitta och följa dina vänner på YouVersion. Genom att länka dina konton möjliggörs delning av innehållet med bara några klick. Vi kommer aldrig att skicka något utan din tillåtelse."
+  connection marketing: "YouVersion är roligare med vänner! Länka ditt YouVersion-konto till dina övriga sociala nätverk för att direkt hitta och följa dina vänner på YouVersion. Genom att länka dina konton kan du dela innehåll med bara några klick. Vi kommer aldrig att skicka något utan din tillåtelse."
   next step connections: "Nästa: Länka ditt konto och hitta dina vänner."
   you are now following: "Du följer nu %{username}"
   you are no longer following: "Du följer inte längre %{username}"
@@ -41,15 +41,15 @@ sv:
   no likes found: "%{username} har inte gillat något än."
   no notes found: "%{username} har inga anteckningar."
   no recent activity: "%{username} har inga nyliga aktiviteter."
-  no badges found yourself: "Du har ännu inte fått några emblem."
-  no badges found other: "%{username} har ännu inte fått några emblem."
-  see users badges: "Se alla %{username}s emblem"
+  no badges found yourself: "Du har inte fått några medaljer än."
+  no badges found other: "%{username} har inte fått några medaljer än."
+  see users badges: "Se alla %{username}s medaljer"
   followers: "Följare"
   following: "Följer"
   highlight: "Markering"
   bookmark: "Bokmärke"
   earned badge date: "Fådd av %{username} för %{ago} sedan"
-  badges title: "Emblem"
+  badges title: "Medaljer"
   currently selected: "Nu markerat:"
   read reference: "Läs %{reference}"
   compare all versions: "Jämför alla översättningarna"
@@ -66,6 +66,7 @@ sv:
   successful sign-out: "Utloggad!"
   invalid login: "Ogiltigt användarnamn och lösenord"
   invalid password: "Felaktigt lösenord"
+  sign back in: "För din säkerhet loggas du automatiskt ut efter två veckor. Logga in igen."
   youversion: "YouVersion"
   username or email prompt: "Användarnamn (eller e-post)"
   password prompt: "Lösenord"
@@ -76,7 +77,6 @@ sv:
   registered ago: "Registrerad %{time_ago} sedan"
   version header: "Översättning: %{version}"
   bible versions: "Bibelöversättning"
-  read this version: "Läs denna översättning"
   reader: "Läsare"
   lifechurch short url: "LifeChurch.tv"
   about: "Om"
@@ -127,10 +127,10 @@ sv:
     unlike button text: "Sluta gilla"
   notes:
     list title: "Anteckningar"
-    loading community: "Laddar gemensamma anteckningar..."
-    no community notes: "Inga offentliga anteckningar hittades som refererar valda verser. För att skapa en anteckning, välj en vers i bibelläsaren och klicka på knappen Markerat högst upp i läsaren. "
-    public: "Offentlig"
-    private: "Privat"
+    loading community: "Laddar delade anteckningar..."
+    no community notes: "De valda verserna finns inte med i någon delad anteckning. För att skapa en ny anteckning, välj en vers i bibelläsaren och klicka på knappen Markerat högst upp i läsaren."
+    public: "Delad"
+    private: "Egen"
     draft: "Utkast"
     creation form errors: "Följande fel hindrade dig att skapa din anteckning:"
     reference field: "Referens(er):"
@@ -141,7 +141,7 @@ sv:
     select from list: "--Välj--"
     edit note: "Redigera anteckning"
     all notes: "Alla anteckningar"
-    community notes: "Gemenskapsanteckningar"
+    community notes: "Delade anteckningar"
     new note: "Ny anteckning"
     status field: "Status för anteckning:"
     edit: "Redigera"
@@ -192,8 +192,8 @@ sv:
     welcome to youversion: "Välkommen till YouVersion-gemenskapen!"
     confirm email: "Kontrollera din e-post och klicka på länken för att bekräfta din registrering."
     sign up for an account: "Skapa ett gratis YouVersion-konto"
-    follow user: "Följ %{user}"
     follow: "Följ"
+    follow user: "Följ %{user}"
     unfollow: "Sluta följ"
     following title: "Personer jag följer"
     user does not follow you: "%{user} följer inte dig."
@@ -220,7 +220,7 @@ sv:
     no devices download copy: "Bibelappen är en gratis mobil Bibel baserad på online-biblen YouVersion.com som kan installeras på nästan vilken mobil enhet som helst. Bibelappen låter användare läsa Bibeln, dela verser på deras sociala nätverk, skapa bokmärken för deras favorittexter m.m.&mdash;allt i ett format som hänger med i det allt mer mobila livet. Besök <a href='http://www.youversion.com/sv/download'>youversion.com/sv/download</a> från din mobila enhet för att ladda ner Bibelappen och anslut ditt konto!"
     yes delete: "Ja, ta bort mitt konto"
     account delete success: "Ditt YouVersion-konto har tagits bort. Vi hoppas att du fortsätter att hitta meningsfulla sätt att komma i kontakt med Bibeln. Några av dessa appar kanske kan hjälpa dig att komma framåt: <a href= http://www.youversion.com/sv/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-    delete account description: "Om du tar bort ditt konto kommer du permanent radera all din information, historia och anpassning (som t.ex. anteckningar, bokmärken, markeringar etc.) på YouVersion.com och i Bibelappen. Detta kan inte återställas av dig eller av vårt team. Om du är säker på att du vill fortsätta, gå vidare nedan."
+    delete account description: "Om du tar bort ditt konto kommer du permanent radera all din information, historik och anpassningar (som t.ex. anteckningar, bokmärken, markeringar etc.) på YouVersion.com och i Bibelappen. Detta kan inte återställas av dig eller av vårt team. Om du är säker på att du vill fortsätta, gå vidare nedan."
     user recent activity: "%{user}s senaste aktivitet"
     user notes: "%{user}s anteckningar"
     my friends: "Vänner"
@@ -230,7 +230,7 @@ sv:
     user bookmarks: "%{user}s bokmärken"
     my likes: "Mina länkar"
     user likes: "%{user}s länkar"
-    my badges: "Mina emblem"
+    my badges: "Mina medaljer"
     revised date: "Senast ändrad den %{date}"
     update email copy: "Ange en ny e-postadress och klicka Uppdatera e-post. Vi kommer att skicka dig en länk för att bekräfta din nya e-postadress."
     edit email: "Uppdatera e-postadress"
@@ -243,7 +243,7 @@ sv:
     invalid confirm hash: "Ledsen, men bekräftningskoden verkar ogiltig. Du kan pröva att ladda om sidan för att försöka igen. Om problemet kvarstår kan du klicka nedan för att få en ny bekräftningskod."
     confirm password to continue: "Vänligen ange ditt lösenord för att logga in och komma igång."
     invalid email forgot: "Vi kunde inte hitta ett konto med denna e-postadress. Försök igen."
-    error deleting account: "Det uppstod ett problem hos oss. Försök igen eller kontakta support."
+    error deleting account: "Det uppstod ett problem hos oss. Försök igen eller kontakta supporten."
     send new password button: "Skicka nytt lösenord"
     forgot password copy: "Ange din e-postadress och klicka Skicka nytt lösenord, så skickar vi dig ett nytt lösenord."
     forgot password check: "Lyckades! Kontrollera din e-post för ditt nya lösenord."
@@ -257,7 +257,7 @@ sv:
     resend confirmation button: "Bekräfta omsändning"
     privacy:
       policy: "%{youversion}s Sekretesspolicy"
-      intro: "YouVersion, en webbplats och applikation som ägas och sköts av LifeChurch.tv, vet att du bryr dig om hur information om dig används och sprids. Vi hoppas att följande påpekande kommer att hjälpa dig att förstå hur YouVersion kommer att samla, använda och skydda informationen du lämnar till oss på sidan eller i appen. "
+      intro: "YouVersion, en webbplats och applikation som ägs och sköts av LifeChurch.tv, vet att du bryr dig om hur information om dig används och sprids. Vi hoppas att följande information kommer att hjälpa dig att förstå hur YouVersion kommer att samla in, använda och skydda informationen du lämnar till oss på sidan eller i appen. "
       translation disclaimer: "Sekretesspolicyn har översatts för din bekvämlighet, men  LifeChurch.tv ger inga garantier eller utfästelser med avseende på riktigheten i översättningen. Om några avvikelser finns mellan den engelska och den översatta versionen, är det den engelska versionen som gäller."
       what we collect: "Vad vi samlar in och hur vi använder det"
       your information title: "Information du lämnar"
@@ -366,11 +366,11 @@ sv:
       error: "Ett fel uppstod vid ändring av lösenord."
       old was invalid: "Du måste ange ditt gamla lösenord korrekt för att kunna ändra lösenord."
     notifications:
-      badges: "Meddela mig om emblem jag får."
+      badges: "Meddela mig när jag får medaljer."
       follower: "Meddela mig när någon följer mig."
-      newsletter: "Håll mig uppdaterad om tillkännagivanden från YouVersion."
+      newsletter: "Håll mig uppdaterad om meddelanden från YouVersion."
       note_like: "Meddela mig när någon gillar mina anteckningar."
-      reading_plans: "Meddela mig med information för läsplaner jag startat."
+      reading_plans: "Meddela mig med information om läsplaner jag startat."
       publishing partners: "Håll mig uppdaterad om nyheter från YouVersions innehållspartner."
       update: "Uppdateringsmeddelanden"
   bookmarks:
@@ -387,6 +387,7 @@ sv:
     creation form errors: "Följande fel gjorde att du inte kunde skapa ditt bokmärke:"
     successfully created: "Bokmärket tillagt"
     successfully deleted: "Bokmärke borttaget"
+    successfully updated: "Bokmärke uppdaterad"
     labels placeholder: "Separera flera etiketter med komma."
     save: "Spara bokmärke"
     confirm delete: "Ja, jag är säker."
@@ -398,8 +399,8 @@ sv:
     color: "Färg:"
     version field: "Översättning:"
   badges:
-    earned a badge: "Fått ett emblem"
-    user badges: "%{user}s emblem"
+    earned a badge: "Fick en medalj"
+    user badges: "%{user}s medaljer"
   plans:
     title: "Läsplaner"
     browse by category: "Bläddra efter katergori"
@@ -416,7 +417,7 @@ sv:
     start: "Starta planen"
     length field: "Planlängd:"
     view sample: "Visa en provläsning"
-    users subscribed: "%{user_count} användare läser planen"
+    users subscribed: "%{user_count} användare följer den här planen"
     more info: "Mer info"
     about this plan: "Om planen"
     about the publisher: "Om utgivaren"
@@ -424,10 +425,10 @@ sv:
     month: "Kalender"
     publisher: "Utgivare"
     success widget title: "Gör ditt bästa med din läsplan"
-    success blurb: "Läsplaner är bästa sättet att göra Guds Ord till en del av ditt vardagliga liv. Men nästan alla kommer efter då och då. Att höra vad Gud har att säga till oss varje dag är viktigt, så vi har satt samman några tips för att hjälpa dig att hålla dig på banan."
+    success blurb: "Läsplaner är bästa sättet att göra Guds Ord till en del av ditt vardagliga liv. Men nästan alla kommer efter då och då. Att höra vad Gud har att säga till oss varje dag är viktigt, så vi har satt samman några tips för att hjälpa dig att hålla din läsplan."
     success blog link title: "Läs blogginlägg"
     a users plans: "%{username}s planer"
-    you have no plans: "Du prenumererar inte på någon läsplan just nu."
+    you have no plans: "Du följer inga läsplaner just nu."
     no public plans: "Inga läsplaner är synliga för %{username}."
     filter by lang: "Filtrera planer efter språk"
     settings: "Inställningar"
@@ -449,15 +450,15 @@ sv:
     do you want to reset: "Vill du börja om?"
     catch up text: "Flytta dagens läsning tillbaka till din senaste fullföljda läsning (dag %{last_completed_day} i din plan)."
     catch up description only: "Om du någonsin kommer efter med din läsning, oroa dig inte! Du kan alltid flytta aktuell läsning tillbaka till senaste fullföljda läsning."
-    catch me up: "Kom ikapp"
+    catch me up: "Justera läsplan"
     restart description: "Du kan starta om din plan. Hela din läshistoria och framgång kommer att återställas och startas från början."
     restart: "Starta om plan"
-    privacy description: "Det är ditt val. Vill du att andra ska kunna se att du läser planen?"
+    privacy description: "Det är ditt val. Vill du att andra ska kunna se att du följer den här planen?"
     make private: "Gör privat"
     make public: "Gör publik"
     privacy title: "Sekretess"
-    stop reading: "Sluta läs planen"
-    accountability: "Ansvar"
+    stop reading: "Sluta följa den här planen"
+    accountability: "Uppföljning"
     email reminder to me: "E-posta en daglig påminnelse till mig (%{email_address})"
     email weekly report to a friend: "E-posta en veckorapport till en eller flera YouVersion-medlemmar"
     calendar: "Kalender"
@@ -486,8 +487,8 @@ sv:
     email delivery on successful: "Daglig läsning kommer att skickas via e-post."
     email delivery off successful: "Daglig läsning via e-post kommer inte att skickas längre."
     email delivery updated successful: "Inställningar för e-postleverans uppdaterade"
-    report on successful: "Veckovisa ansvarsrapporter kommer att skickas."
-    report off successful: "Veckovisa ansvarsrapporter kommer inte att skickas längre."
+    report on successful: "Klart! Uppföljningsrapport kommer att skickas veckovis."
+    report off successful: "Veckovis uppföljningsrapport kommer inte att skickas längre."
     catch up successful: "Du är nu i kapp med din läsning."
     restart successful: "Din läsplan har återstartats från början."
     subscribe successful: "Toppen! Du prenumererar nu på planen."
@@ -495,12 +496,12 @@ sv:
     must start to complete: "Starta denna läsplan för att spara utförd läsning!"
     invalid reference: "En av skrifterna refererade för denna läsning verka inte existera i den valda översättningen. Försök att välja en annan översättning ovan. Om du fortsätter se detta meddelande, var snäll och meddela vår <a href='%{support_url}'>supportgrupp</a> om problemet. "
   registration:
-    with facebook: "Registrera dig genom Facebook"
+    with facebook: "Registrera dig via Facebook"
     benefits title: "Få hela upplevelsen"
-    benefits blurb: "Att skapa ett YouVersion-konto ger dig tillgång till fler funktioner som till exempel bokmärken och anteckningar. De kommer att visas på valfri enhet där du är inloggad. Ett konto gör det också enklare att dela Bibeln med dina vänner, så ge det en minut eller två och registrera dig!"
+    benefits blurb: "Genom att skapa ett YouVersion-konto får du tillgång till fler funktioner som till exempel bokmärken och anteckningar. De kommer att visas på valfri enhet där du är inloggad. Ett konto gör det också enklare att dela Bibeln med dina vänner. Så ge det en minut eller två och registrera dig!"
     plan blurb: "Det ser ut som att du vill starta en läsplan. Smart! Planer kan hjälpa dig att göra Bibeln till en del av din vardag. Logga in eller skapa ett konto nedan och kom igång!"
     bookmark blurb: "Det ser ut som att du vill använda bokmärken. Fantastiskt! Bokmärken hjälper dig att hålla ordning på verser du vill komma ihåg eller markera som favoriter. Logga in eller skapa ett konto nedan och kom igång!"
-    friends blurb: "Det ser ut som att du vill interagera med vänner. Bra idé! Du kommer kunna dela med dig av vad du lär dig och hjälpa varandra att hålla sig på banan med sina läsmål. Logga in eller skapa ett konto och kom igång!"
+    friends blurb: "Det ser ut som att du vill interagera med dina vänner. Bra idé! Ni kommer kunna dela vad ni lär er och hjälpa varandra att följa läsplaner. Logga in eller skapa ett konto och kom igång!"
     highlight blurb: "Det ser ut som att du vill markera i Skriften. Fantastiskt! Markeringar hjälper dig att organisera och hålla reda på dina favoritverser. Logga in eller skapa ett konto nedan och kom igång!"
     note blurb: "Det ser ut som att du vill skapa en anteckning om Skriften. Bra tänkt! Anteckningar kan hjälpa dig att komma ihåg och organisera sanningen du hittar i Guds Ord. Logga in eller skapa ett konto nedan och kom igång!"
   audio:
@@ -557,7 +558,7 @@ sv:
     youversion copy: "Sedan starten 1996 har syftet för LifeChurch.tv varit att få folk att bli helt hängivna efterföljare till Kristus. För att göra det har vi letat efter nya sätt att hjälpa människor komma i kontakt med Bibeln i deras vardag. Våra metoder har förändrats med åren då vi använt olika tekniker och strategier. Men vårt kärnfokus förändras inte då vi ständigt strävar efter att visa och lära människor hur Guds Ord gäller alla, oavsett var de befinner sig i livet."
     youversion copy 2: "YouVersion representerar ett nytt område för LifeChurch.tv:s insatser. Vi bygger inte bara ett verktyg för att påverka världen med innovativ teknik. Framför allt engagerar vi människor i sina relationer med Gud efterhand som de upptäcker den relevans Bibeln har för deras liv."
     partners title: "Bibelpubliceringspartner"
-    partners text: "Utan våra generösa bibelpubliceringspartners skulle YouVersion inte ha möjlighet att tillhandahålla vår världsomspännande gemenskap med så många Biblar. Många av er har frågat oss hur ni kan tacka dessa viktiga supporters till YouVersion. Du kan läsa mer om dem, om deras arbete, och om hur du kan stödja dem via länken nedan."
+    partners text: "Utan våra generösa bibelpubliceringspartners skulle YouVersion inte ha möjlighet att tillhandahålla vår världsomspännande gemenskap med så många Biblar. Många av er har undrat hur ni kan tacka dem för deras viktiga stöd till YouVersion. Du kan läsa mer om dem, om deras arbete och om hur du kan stödja dem, via länken nedan."
     translation title: "Vårt översättningsteam"
     learn more: "Läs mer"
     bible dot com title: "Vad hände med gamla Bible.com?"
@@ -571,8 +572,8 @@ sv:
     blog: "YouVersion Blogg"
     facebook: "YouVersion på Facebook"
     twitter: "YouVersion på Twitter"
-    support: "Behöver hjälp med YouVersion?"
-    lead copy: "Bibelappen, baserad på online-Bibeln YouVersion.com, är en gratis mobil-Bibel som kan installeras på nästan alla telefoner. Bibelappen låter användare läsa Bibeln, dela verser i sina sociala nätverk, bokmärka sina favoritpassager och mer&mdash;allt i ett format som håller jämna steg med den mobila livsstilen."
+    support: "Behöver du hjälp med YouVersion?"
+    lead copy: "Bibelappen, baserad på online-Bibeln YouVersion.com, är en gratis Bibel för mobilen, som kan installeras på nästan alla telefoner. Bibelappen låter användare läsa Bibeln, dela verser i sina sociala nätverk, bokmärka sina favoritpassager och mer&mdash;allt i ett format som håller jämna steg med den mobila livsstilen."
     resources title: "Pressinformation"
     now title: "Idag i YouVersion-gemenskapen"
     resources:
@@ -642,3 +643,15 @@ sv:
   app errors:
     404 explanation: "Du kan pröva att gå tillbaka till <a href='%{reader_path}'>startsidan</a>.\nOm du fortfarande har problem kan du kontakta vår <a href='%{support_url}'>supportgrupp</a>."
     404 message: "Tyvärr, men sidan du letar efter kan inte hittas."
+    408 message: "Tyvärr svarade inte våra servrar i tid."
+    408 explanation: "Du kan försöka igen genom att <a href= %{reload_path}>uppdatera</a> sidan.  Vi har blivit informerade och kommer se till att åtgärda eventuella problem så fort som möjligt."
+  versions:
+    index title: "Tillgängliga översättningar"
+    publisher widget title: "Utgivare"
+    visit publisher: "Besök utgivarens hemsida"
+    read title: "Läs denna översättningen"
+    other versions: "Andra översättningar från denna utgivare"
+    number of versions field: "Totalt antal översättningar:"
+    number of languages field: "Totalt antal språk:"
+    language and count: "%{language_name} (%{language_count})"
+    public domain: "Allmän egendom"
